--- a/PwagGalaxy/PwagGalaxy.vcxproj
+++ b/PwagGalaxy/PwagGalaxy.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
+    <ClCompile Include="Timer.cpp" />
     <ClCompile Include="VoyagerEngine.cpp" />
     <ClCompile Include="WindowsApplication.cpp" />
   </ItemGroup>
@@ -163,6 +164,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TextureLoader.h" />
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="VoyagerEngine.h" />
     <ClInclude Include="WindowsApplication.h" />
   </ItemGroup>
