Add primitive model loading

--- a/PwagGalaxy/PwagGalaxy.vcxproj.filters
+++ b/PwagGalaxy/PwagGalaxy.vcxproj.filters
@@ -82,5 +82,11 @@
     <CopyFileToFolders Include="VertexShader.hlsl">
       <Filter>Resource Files</Filter>
     </CopyFileToFolders>
+    <CopyFileToFolders Include="Resources\ship_v1.obj">
+      <Filter>Resource Files</Filter>
+    </CopyFileToFolders>
+    <CopyFileToFolders Include="Resources\suzanne.obj">
+      <Filter>Resource Files</Filter>
+    </CopyFileToFolders>
   </ItemGroup>
 </Project>
