--- a/PwagGalaxy/PwagGalaxy.vcxproj
+++ b/PwagGalaxy/PwagGalaxy.vcxproj
@@ -147,11 +147,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BufferMemoryManager.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ConsoleHelper.cpp" />
     <ClCompile Include="DXContext.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="EngineHelpers.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="Timer.cpp" />
@@ -159,11 +162,14 @@
     <ClCompile Include="WindowsApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BufferMemoryManager.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ConsoleHelper.h" />
     <ClInclude Include="DXContext.h" />
     <ClInclude Include="dx_includes\DXSampleHelper.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="EngineHelpers.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TextureLoader.h" />
     <ClInclude Include="Timer.h" />
