--- a/PwagGalaxy/PwagGalaxy.vcxproj
+++ b/PwagGalaxy/PwagGalaxy.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="AssetConfigReader.cpp" />
     <ClCompile Include="BufferMemoryManager.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="ConfigurationGenerator.cpp" />
     <ClCompile Include="ConsoleHelper.cpp" />
     <ClCompile Include="DefaultTexturedMaterial.cpp" />
     <ClCompile Include="DXContext.cpp" />
@@ -159,6 +160,7 @@
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Noise.cpp" />
+    <ClCompile Include="PlanetBuilder.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -171,6 +173,7 @@
     <ClInclude Include="AssetConfigReader.h" />
     <ClInclude Include="BufferMemoryManager.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="ConfigurationGenerator.h" />
     <ClInclude Include="ConsoleHelper.h" />
     <ClInclude Include="DefaultTexturedMaterial.h" />
     <ClInclude Include="DXContext.h" />
@@ -180,6 +183,8 @@
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Noise.h" />
+    <ClInclude Include="PlanetBuilder.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Texture.h" />
